1998-07-05  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, esdlib.c, players.c, proto.c, samples.c:
	more endian swapping fixes. works for Linux, half of it
	works irix->linux, much seems to be broken on irix. added
	test-script for quick run through of features.

1998-07-04  Yo Ric Dude  <ericmit@ix.netcom.com>

	* esd-server.h, esd.h, esdlib.c, players.c, proto.c, samples.c,
	woo! the endian swapping detection is in place, and works, at
	least for byte streams.  still need translation functions in
	the mix logic, to byte swap data buffers before addition.

1998-07-04  Yo Ric Dude  <ericmit@ix.netcom.com>

	* clients.c, esd-server.h, proto.c: following the lead of 
	the need_validation flag, it's possible that the same problem
	could occur while caching a sample, changed need_validation to
 	client->state, so it can track incomplete protocol requests.
	Still need to add the intelligence for the sample caching.

	* esdlib.c: esdlib now does proper arg checking (NULL for names)

	* esdcat.c: reverted to previous form, name is file (or nothing)

1998-07-03  Manish Singh  <yosh@gimp.org>

	* esdcat.c: pass a valid pointer for name in esd_play_stream_callback
	(quick fix; esdlib should really do proper arg checking)

1998-07-01  Yo Ric Dude  <ericmit@ix.netcom.com>

	* audio_irix.c, configure.in: fixed audio_irix driver. works on an
	Octane.  Autoconf tools are a little weird on irix.  had to manually
	tweak the generated makefile to remove .deps references. added
	lib check routines to find -laudio. look into improving autoconf-irix

1998-06-28  Raja R Harinath  <harinath@cs.umn.edu>

	* clients.c (wait_for_clients_and_data): Return 0.
	(get_new_clients): Remove validation code.  Moved to
	`poll_client_requests' (in proto.c).	
	* proto.c: (esd_proto_lock): Likewise.
	(esd_proto_unlock): Likewise.
	(esd_proto_standby): Likewise.
	(esd_proto_resume): Likewise.
	(poll_client_requests): Centralize validation.  Move invocation of